# Kiddozz

./: .gitignore  README.md  TECHNICAL_DOCUMENTATION.md  USER_GUIDE.md  USER_STORIES.md  diagnose_manifest.kt  gradle.properties  railway.toml  settings.gradle.kts
backend/: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  check_absences.py  check_db.py  docker-compose.yml  env.example  pyproject.toml  requirements.txt  start.sh  start_local.sh  start_prod.sh  start_staging.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_add_images_table.py  002_create_event_images_table.py  09bfd1d87bd1_add_educators_table.py  0faed39f155f_add_kid_absences_table_and_holiday_.py  121f02a9665d_add_users_table.py  12b8a5095ad5_add_events_and_event_images_tables.py  132a1c824d7b_fix_enum_configuration.py  14d94cc70ad8_update_db_to_use_database_url.py  3009d0ea1444_add_allergies_and_need_to_know_columns_.py  44326a409bb9_add_classes_field_to_users_table.py  ae406d16f552_add_users_table.py  (+9 more)
backend/app/: __init__.py  main.py
backend/docs/: DEV_MEMO.md  TESTING.md  absences_partitioning.md
backend/scripts/: archive_absences.py  ensure_next_year_partition.py
backend/tests/: conftest.py  test_absence_partitions.py  test_auth.py  test_daycare_schema.py  test_dummy_users.py  test_dummy_users_db.py  test_educators.py  test_educators_api.py  test_educators_fixed.py  test_events.py  test_identity_endpoints.py  test_kids.py  test_kids_absences.py  test_kids_attendance_update.py  test_kids_constraints.py  test_kids_endpoint.py  test_parents.py  test_users.py
(+152 files in other folders)
